# japanese-tutor

./: .env  .env.example  .env.template  README.md  app.py  current_packages.txt  fly.toml  japanese_tutor.py  japanese_tutor_clean.py  pyproject.toml  requirements.txt  restart_tutor.sh  run_tutor.py  simple_tutor.py  start_tutor.sh  status_tutor.sh  stop_tutor.sh  tutor_multimodal.py  web_interface_clean.py
app/: __init__.py  main.py
memory/: mistakes.json  user_profile.json
static/: index.html  script.js  styles.css
